examples/cepth-tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbd-test-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["/bin/sh", "-c", "echo 'Hello from Block Storage!' > /mnt/rbd/test.txt && sleep 3600"]
    volumeMounts:
    - mountPath: /mnt/rbd
      name: rbd-vol
  volumes:
  - name: rbd-vol
    persistentVolumeClaim:
      claimName: rbd-pvc-test

---
apiVersion: v1
kind: Pod
metadata:
  name: cephfs-test-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["/bin/sh", "-c", "echo 'Hello from Shared Filesystem!' > /mnt/cephfs/test.txt && sleep 3600"]
    volumeMounts:
    - mountPath: /mnt/cephfs
      name: cephfs-vol
  volumes:
  - name: cephfs-vol
    persistentVolumeClaim:
      claimName: cephfs-pvc-test

---
apiVersion: v1
kind: Pod
metadata:
  name: s3-test-pod
spec:
  containers:
  - name: aws-cli
    image: amazon/aws-cli:latest
    command: ["/bin/sh", "-c"]
    # This script writes a file and uploads it to your new Ceph S3 bucket
    args:
      - |
        echo "Hello from S3 Object Storage!" > /tmp/s3-test.txt
        aws s3 --endpoint-url http://$BUCKET_HOST:$BUCKET_PORT cp /tmp/s3-test.txt s3://$BUCKET_NAME/s3-test.txt
        echo "File successfully uploaded to bucket: $BUCKET_NAME"
        sleep 3600
